# ZMP

./: .gitignore  CMakeLists.txt  README.md  cmds.txt  cmds.txt.tmp  polecenia.txt  polecenia.txt.tmp  test.cpp  text.txt  text.txt.tmp
config/: config.xml  config2.xml  config_3.xml
inc/: AbstractComChannel.hh  AbstractInterp4Command.hh  AbstractMobileObj.hh  AbstractScene.hh  AccessControl.hh  ComChannel.hh  ComInterface.hh  Configuration.hh  ConfigurationCuboid.hh  Cuboid.hh  Port.hh  Scene.hh  Vector3D.hh  geomVector.hh  interpreter.hh  libInterface.hh  mobileObj.hh  mobileObjConf.hh  parser.hh  pluginManager.hh  xmlinterp.hh
plugin/: CMakeLists.txt  Makefile
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
src/: ComInterface.cpp  Scene.cpp  Vector3D.cpp  interpreter.cpp  libInterface.cpp  main.cpp  parser.cpp  pluginManager.cpp  xmlinterp.cpp
